[package]
authors = ["fran <fran.sl@atlascity.io>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
cortex-m-rtfm = "0.5.1"

[dependencies.stm32f4xx-hal]
features = ["stm32f411", "rt"]
version = "0.6.0"

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false